<?xml version="1.0"?>
<package>
  <name>catkin_simple</name>
  <version>0.1.1</version>
  <description>catkin, simpler</description>
  <maintainer email="han@han.com">han</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

</package>
