<?xml version="1.0"?>
<package>
  <name>example_ros_service</name>
  <version>0.0.0</version>
  <description>The example_ros_service package</description>
  <maintainer email="han@han.com">wyatt</maintainer>
  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
    
