<?xml version="1.0"?>
<package>
  <name>example_ros_class</name>
  <version>0.0.0</version>
  <description>The example_ros_class package</description>
  <maintainer email="han@han.com">han</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>std_srvs</run_depend>
  <export>
  </export>
</package>
    
