<?xml version="1.0"?>
<package>
  <name>minimal_nodes</name>
  <version>0.0.0</version>
  <description>The minimal_nodes package</description>
  <maintainer email="han@han.com">han</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
